<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_nav_bookmarks"
            android:title="@string/bookmarks" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings_text" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_nav_contacts"
            android:title="@string/nav_contacts" />

    </group>
</menu>